--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.picturesafe.search</groupId>
     <artifactId>elasticsearch-querygenerator</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>elasticsearch-querygenerator</name>
@@ -62,7 +62,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-        <picturesafe-search-spring-boot-starter.version>3.5.0-SNAPSHOT</picturesafe-search-spring-boot-starter.version>
+        <picturesafe-search-spring-boot-starter.version>3.5.0</picturesafe-search-spring-boot-starter.version>
         <vaadin.version>16.0.0</vaadin.version>
         <frontend-maven-plugin.version>1.9.1</frontend-maven-plugin.version>
     </properties>
